# rust-burn-vitalsigns

./: .gitignore  Cargo.toml  README.md
guide/checkpoint/: model-10.mpk  model-9.mpk  optim-10.mpk  optim-9.mpk
src/: dataset.rs  inference.rs  main.rs  model.rs  training.rs
vital-signs/: config.json
vital-signs/checkpoint/: model-19.mpk  model-20.mpk  optim-19.mpk  optim-20.mpk
