[package]
name = "rust-burn-vitalsigns"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.16.0", features = ["train", "vision"] }
burn-autodiff = "0.16.0"
burn-cuda = "0.16.0"
indicatif = { version = "0.17.0-rc.11" }
serde = {version = "1.0.218", features = ["std", "derive"]}
csv = {version = "1.3.1"}
textplots = "0.8.6"
rgb = "0.8.27"
